# worldgen

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TESTING_GUIDE.md  Trunk.toml  build.rs  compose.yaml  deploy.sh  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  push_image.sh  run_local.sh  style.css  style.patch  supervisord.conf
.cargo/: config.toml
.cspell/: custom-dictionary-workspace.txt
docs/: library-integration.md
examples/: external_consumer.rs  show_travellermap_url.rs
javascript/: package-lock.json  package.json  tsconfig.json
javascript/public/: index.html
javascript/src/: App.tsx  SystemView.tsx  WorldTable.tsx  astrodata.ts  index.tsx  style.css  worldgen.ts
notes/: TODO_process_trades_placement.md
public/: index.html
public/css/: modal.css
scripts/: push_image.sh  run-backend.sh  run-frontend.sh
src/: App.tsx  SystemView.tsx  WorldTable.tsx  api.rs  app.rs  astro.rs  astrodata.rs  gas_giant.rs  has_satellites.rs  index.css  lib.rs  logging.rs  main.rs  name_tables.rs  seed.rs  system.rs  system_tables.rs  systemview.rs  util.rs  world.rs  worldgen.rs  worldgen.ts  worldtable.rs
src/backend/: captains_log_server.rs  firestore.rs  gcs.rs  http_server.rs  mod.rs  server.rs  simulator_server.rs  state.rs  vertex_client.rs
src/comms/: captains_log.rs  client.rs  mod.rs  state.rs
src/components/: app.rs  captains_log_instructions.rs  captains_log_prompt.rs  help_tooltip.rs  mod.rs  selector.rs  ship_simulator.rs  system_generator.rs  system_map.rs  system_view.rs  systemview.rs  tooltip_docs.rs  trade_computer.rs  trade_view.rs  traveller_map.rs  world_entry.rs  world_list.rs  worldmap.rs
src/components/${workspaceFolder:worldGen}/.cspell/: custom-dictionary-workspace.txt
src/simulator/: economy.rs  executor.rs  firestore.rs  incidents.rs  map_render.rs  mod.rs  protocol.rs  route.rs  types.rs  world_fetch.rs
src/sysmap/: colors.rs  geometry.rs  mod.rs
src/sysmap/render/: mod.rs  png.rs  svg.rs
src/systems/: astro.rs  constraint.rs  gas_giant.rs  has_satellites.rs  mod.rs  name_tables.rs  system.rs  system_tables.rs  world.rs
src/systems/${workspaceFolder:worldGen}/.cspell/: custom-dictionary-workspace.txt
src/trade/: available_goods.rs  available_passengers.rs  mod.rs  ship.rs  ship_manifest.rs  table.rs
src/trade/${workspaceFolder:worldGen}/.cspell/: custom-dictionary-workspace.txt
src/worldmap/: biome.rs  climate.rs  colormap.rs  features.rs  grid.rs  mod.rs  noise.rs  raster.rs  rivers.rs  tectonics.rs
src/worldmap/render/: mod.rs  png.rs  svg.rs
tests/: http_server_smoke.rs  library_api.rs  production_smoke.rs
trade/: Cargo.toml
trade/src/: available_goods.rs  available_passengers.rs  lib.rs  table.rs
trade/src/${workspaceFolder:worldGen}/.cspell/: custom-dictionary-workspace.txt
