[package]
name = "worldgen"
version = "1.3.0"
edition = "2021"
license = "MIT"

[lib]
# This tells the compiler to produce a .wasm file for the browser
# and an .rlib for your server to link against.
crate-type = ["cdylib", "rlib"]

[package.metadata.leptos]
bin-target = "worldgen-server"
output-name = "worldgen"
bin-exe-name = "worldgen-server"
site-root = "target/site"
style-file = "style.css"
assets-dir = "public"

bin-features = ["ssr"]
lib-features = ["hydrate"]

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
leptos = { version = "0.8.15" }
leptos_router = { version = "0.8.11" }
leptos_meta = { version = "0.8.5" }
log = "0.4.29"
rand = "0.9.2"
reactive_stores = "0.3.1"
test-log = "0.2.19"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "Headers", "Storage"] }
wasm-logger = "0.2"

# Force the version to align across the whole project
# tachys = { version = "0.2.0-rc3" }

# Server-side dependencies (only compiled with ssr feature)
axum = { version = "0.8", features = ["macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
firestore = { version = "0.47", optional = true }
thiserror = { version = "2.0", optional = true }
env_logger = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = true, optional = true }
leptos_ws = { version = "0.9.7", optional = true }
leptos_axum = { version = "0.8.7", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"], optional = true }
console_log = "1.0.0"

[features]
default = []
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:firestore",
    "dep:thiserror",
    "dep:rustls",
    "env_logger",
    "tracing-subscriber",
    "leptos_ws/ssr",
    "leptos/ssr",
    "leptos/tracing",
    "leptos_ws/ssr",
    "leptos_router/ssr",
    "leptos_router/tracing",
    "leptos_meta/ssr",
    "leptos_meta/tracing",
    "leptos_axum",
]
hydrate = ["leptos/hydrate", "leptos/tracing", "dep:leptos_ws", "leptos_ws/hydrate"]
csr = ["dep:leptos_ws", "leptos/csr", "leptos_ws/csr", "leptos/tracing"]

[[bin]]
name = "worldgen-server"
path = "src/bin/main.rs"

[[bin]]
name = "trade"
path = "src/bin/trade.rs"

[[bin]]
name = "world"
path = "src/bin/world.rs"
