[package]
name = "worldgen"
version = "2.0.0"
edition = "2024"
license = "MIT"

[features]
default = []
# Backend feature enables native-only server code (tokio, firestore, etc.)
backend = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:firestore", "dep:env_logger", "dep:rustls"]
# Local development mode: connect directly to backend on 8081 instead of through nginx
local-dev = []

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.14.0"
lazy_static = "1.5.0"
leptos = { version = "0.8.2", features = ["csr", "ssr"] }
leptos_meta = "0.8.2"
log = "0.4.22"
rand = "0.9.1"
reactive_stores = "0.2.2"
test-log = "0.2.16"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "Headers", "Storage", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
wasm-logger = "0.2"
leptos-use = { version = "0.16.2", features = ["storage"] }
codee = "0.3.2"
backtrace = "0.3.75"
reactive_graph = "0.2.6"
thiserror = "2.0.18"

# Backend-only dependencies (native server)
tokio = { version = "1.49.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
firestore = { version = "0.47.1", optional = true }
env_logger = { version = "0.11.9", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "trade"
path = "src/bin/trade.rs"

[[bin]]
name = "world"
path = "src/bin/world.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["backend"]
