[package]
name = "worldgen"
version = "3.0.0"
edition = "2024"
license = "MIT"

[features]
default = ["frontend"]
# Frontend feature: Leptos UI + WASM bindings. Required for the deployed web
# app (trunk build) and for `cargo test` in the existing project layout.
# Library consumers depending on worldgen as a Cargo dependency should set
# `default-features = false` to avoid pulling Leptos and the WASM toolchain.
frontend = [
    "dep:leptos", "dep:leptos_meta", "dep:leptos-use",
    "dep:reactive_stores", "dep:reactive_graph", "dep:codee",
    "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:serde-wasm-bindgen",
    "dep:web-sys", "dep:js-sys",
    "dep:wasm-logger", "dep:console_error_panic_hook",
]
# Backend feature enables native-only server code (tokio, firestore, etc.)
backend = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:firestore", "dep:env_logger", "dep:rustls", "dep:reqwest", "dep:sentry", "dep:jsonwebtoken", "dep:gcp_auth"]
# Local development mode: connect directly to backend on 8081 instead of through nginx
local-dev = []

[dependencies]
# Always-on deps used by the always-compiled modules (systems, sysmap,
# worldmap, util, trade).
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.9.1"
rand_chacha = "0.9"
noise = "0.9"
tiny-skia = "0.11"
ab_glyph = "0.2"
test-log = "0.2.16"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backtrace = "0.3.75"
thiserror = "2.0.18"
siphasher = "1.0"

# Frontend-only deps (gated behind `frontend` feature). The deployed app
# enables this via `default = ["frontend"]`; library consumers turn it off
# with `default-features = false`.
console_error_panic_hook = { version = "0.1.7", optional = true }
leptos = { version = "0.8.2", features = ["csr", "ssr"], optional = true }
leptos_meta = { version = "0.8.2", optional = true }
reactive_stores = { version = "0.2.2", optional = true }
reactive_graph = { version = "0.2.6", optional = true }
leptos-use = { version = "0.16.2", features = ["storage"], optional = true }
codee = { version = "0.3.2", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "Headers", "Storage", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Element"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-logger = { version = "0.2", optional = true }

# Backend-only dependencies (native server)
tokio = { version = "1.49.0", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }
futures-util = { version = "0.3.32", optional = true }
firestore = { version = "0.47.1", optional = true }
env_logger = { version = "0.11.9", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
# reqwest is used by the simulator's world_fetch to talk to TravellerMap.
# We use native-tls (not rustls-tls) because TravellerMap's edge resets
# rustls connections — possibly fingerprint-blocking the rustls TLS hello.
# Verified empirically: native-tls works, rustls-tls (any config) fails
# with `Connection reset by peer` during the TLS handshake.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "native-tls-vendored"], optional = true }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"], optional = true }
# jsonwebtoken 10.x requires an explicit crypto backend feature — neither is
# the default, and gcloud-sdk pulls jsonwebtoken without picking one, so
# Firestore auth panics at the first JWT signing attempt without this. We
# pick `rust_crypto` (pure-Rust) over `aws_lc_rs` to avoid pulling in
# another native C crypto lib alongside ring (which we already use via rustls).
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"], optional = true }
# gcp_auth is used by the captain's-log Vertex AI client to mint OAuth
# bearer tokens from the existing GOOGLE_APPLICATION_CREDENTIALS service
# account. It uses ring + rustls (already in our tree via Firestore) so
# it adds no new C deps.
gcp_auth = { version = "0.12", optional = true }

# Release profile is tuned for wasm bundle size — Cloud Run caps each
# response at 32 MiB (wire size), and nginx gzip then takes us another
# ~3-4× down on top of these settings. opt-level = "z" trades a few
# percent of speed for noticeably smaller output; lto = "fat" + a single
# codegen unit lets the linker drop unused code aggressively across the
# whole crate graph; strip removes debug symbols (the dominant bloat in
# the previous 36 MB debug build); panic = "abort" elides the unwinder.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "main"
path = "src/bin/main.rs"
required-features = ["frontend"]

[[bin]]
name = "trade"
path = "src/bin/trade.rs"
required-features = ["frontend"]

[[bin]]
name = "world"
path = "src/bin/world.rs"
required-features = ["frontend"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["backend"]
